[gd_scene load_steps=11 format=2]

[ext_resource path="res://src/ship/utils/Collector.gd" type="Script" id=1]
[ext_resource path="res://src/sprites/player/rainCollector/RainCollector_0000.png" type="Texture" id=2]
[ext_resource path="res://src/sprites/player/rainCollector/RainCollector_0004.png" type="Texture" id=3]
[ext_resource path="res://src/sprites/player/rainCollector/RainCollector_0001.png" type="Texture" id=4]
[ext_resource path="res://src/sprites/player/rainCollector/RainCollector_0003.png" type="Texture" id=5]
[ext_resource path="res://src/sprites/player/rainCollector/RainCollector_0002.png" type="Texture" id=6]
[ext_resource path="res://src/sprites/player/rainCollector/RainCollector_0005.png" type="Texture" id=7]
[ext_resource path="res://src/ship/blueprint/Probe.tscn" type="PackedScene" id=8]
[ext_resource path="res://src/ship/blueprint/pin_target.png" type="Texture" id=9]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 4 ), ExtResource( 6 ), ExtResource( 5 ), ExtResource( 3 ), ExtResource( 7 ) ],
"loop": true,
"name": "default",
"speed": 30.0
} ]

[node name="Collector" type="RigidBody2D"]
collision_mask = 257
mass = 7.73
script = ExtResource( 1 )
joints_softness = 0.02
main_sprite_path = NodePath("AnimatedSprite")
item_icon = ExtResource( 9 )

[node name="RayLeft" type="RayCast2D" parent="."]
position = Vector2( -20, -14 )
cast_to = Vector2( 0, -50 )
collision_mask = 273

[node name="RayMiddle" type="RayCast2D" parent="."]
position = Vector2( 0, -16 )
cast_to = Vector2( 0, -50 )
collision_mask = 273

[node name="RayRight" type="RayCast2D" parent="."]
position = Vector2( 18, -14 )
cast_to = Vector2( 0, -50 )
collision_mask = 273

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.21, 0.21 )
frames = SubResource( 1 )
frame = 2
playing = true
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
position = Vector2( 0, 4 )
polygon = PoolVector2Array( -5, 10, 4, 11, 15, 6, 15, -7, 10, -10, 19, -16, 8, -19, -8, -19, -21, -17, -15, -9, -15, 7 )

[node name="Probe" parent="." instance=ExtResource( 8 )]

[node name="Probe6" parent="." instance=ExtResource( 8 )]
position = Vector2( -13, -2 )

[node name="Probe7" parent="." instance=ExtResource( 8 )]
position = Vector2( 12, -2 )

[node name="Probe2" parent="." instance=ExtResource( 8 )]
position = Vector2( 0, 11 )

[node name="Probe3" parent="." instance=ExtResource( 8 )]
position = Vector2( 11, 10 )

[node name="Probe4" parent="." instance=ExtResource( 8 )]
position = Vector2( -12, 10 )
